# uts-backend-mobile

./: .env.example  Caddyfile  Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml
migrations/models/: 0_20260423084744_init.py  1_20260423091723_create count table and make relation with urls table.py  2_20260423112947_update gatau.py
src/models/: __init__.py  count.py  urls.py  users.py
src/routes/: __init__.py  protect.py  user_link_route.py  user_route.py
src/templates/: lock.html  not_found.html
